515 should be prerelease

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -13,7 +13,7 @@
         "webview2-0.9.579-prerelease",
         "webview2-0.9.538",
         "webview2-0.9.538-prerelease",
-        "webview2-0.9.515",
+        "webview2-0.9.515-prerelease",
         "webview2-0.9.488",
         "webview2-0.9.488-prerelease",
         "webview2-0.9.430",
