Added content for 1.0.818.41

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -8,6 +8,7 @@
       "monikers": [],
       "moniker_ranges": [
         "webview2-1.0.824-prerelease",
+        "webview2-1.0.818.41",
         "webview2-1.0.790-prerelease",
         "webview2-1.0.774.44",
         "webview2-1.0.721-prerelease",
