--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -8,6 +8,7 @@
       "monikers": [],
       "moniker_ranges": [
         "webview2-1.0.1248-prerelease",
+        "webview2-1.0.1245.22",
         "webview2-1.0.1222-prerelease",
         "webview2-1.0.1210.39",
         "webview2-1.0.1189-prerelease",
