Try one-liner moniker_ranges

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -7,50 +7,7 @@
       "locale": "en-us",
       "monikers": [],
       "moniker_ranges": [
-        "webview2-1.0.1248-prerelease",
-        "webview2-1.0.1245.22",
-        "webview2-1.0.1222-prerelease",
-        "webview2-1.0.1210.39",
-        "webview2-1.0.1189-prerelease",
-        "webview2-1.0.1185.39",
-        "webview2-1.0.1158-prerelease",
-        "webview2-1.0.1150.38",
-        "webview2-1.0.1133-prerelease",
-        "webview2-1.0.1108.44",
-        "webview2-1.0.1083-prerelease",
-        "webview2-1.0.1072.54",
-        "webview2-1.0.1056-prerelease",
-        "webview2-1.0.1054.31",
-        "webview2-1.0.1020.30",
-        "webview2-1.0.1018-prerelease",
-        "webview2-1.0.1010-prerelease",
-        "webview2-1.0.992.28",
-        "webview2-1.0.961.33",
-        "webview2-1.0.955-prerelease",
-        "webview2-1.0.902.49",
-        "webview2-1.0.902-prerelease",
-        "webview2-1.0.865-prerelease",
-        "webview2-1.0.864.35",
-        "webview2-1.0.824-prerelease",
-        "webview2-1.0.818.41",
-        "webview2-1.0.790-prerelease",
-        "webview2-1.0.774.44",
-        "webview2-1.0.721-prerelease",
-        "webview2-1.0.705.50",
-        "webview2-1.0.674-prerelease",
-        "webview2-1.0.664.37",
-        "webview2-0.9.628-prerelease",
-        "webview2-1.0.622.22",
-        "webview2-0.9.622",
-        "webview2-0.9.579",
-        "webview2-0.9.579-prerelease",
-        "webview2-0.9.538",
-        "webview2-0.9.538-prerelease",
-        "webview2-0.9.515-prerelease",
-        "webview2-0.9.488",
-        "webview2-0.9.488-prerelease",
-        "webview2-0.9.430",
-        "webview2-0.8.355"
+        ">= webview2-0.8.355 <= webview2-1.0.1245.22 || >= webview2-0.9.488-prerelease <= webview2-1.0.1248-prerelease"
       ],
       "open_to_public_contributors": false,
       "type_mapping": {
