--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -7,7 +7,7 @@
       "locale": "en-us",
       "monikers": [],
       "moniker_ranges": [
-        ">= webview2-0.8.355 <= webview2-1.0.2739.15 || >= webview2-0.9.488-prerelease <= webview2-1.0.2730-prerelease"
+        ">= webview2-0.8.355 <= webview2-1.0.2651.64 || >= webview2-0.9.488-prerelease <= webview2-1.0.2730-prerelease || webview2-win32-preview"
       ],
       "open_to_public_contributors": false,
       "type_mapping": {
